@@ -58,6 +58,7 @@ version next:
   instead of AV_CODEC_ID_TEXT
 - smartblur filter ported from MPlayer
 - CPiA decoder
+- decimate filter ported from MPlayer
 
 
 version 0.11:
